Fixed bugs after unit testing

--- a/AuctionService/appsettings.json
+++ b/AuctionService/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CarBiddingDB;User Id=sa;Password=Mshiva33#1;"
+    "DefaultConnection": "Server=localhost;Database=CarBiddingDB;User Id=sa;Password=Mshiva33#1;TrustServerCertificate=True;"
   },
 
   "AllowedHosts": "*"
